2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Main window: Correct the order of the Records: and 
	Found: labels, which became confused at some point, maybe during 1.8.

1.8.5:

2009-01-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_groups_list.cc: Added a missing quote 
	to fix the build.

2009-01-02  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/document/document_glom.cc (set_table_fields): Fixed
	logic so that the document is set to be modified when the new fields
	differ from the old fields, not when they compare equal.

	* glom/libglom/document/document_glom.h: Also copy the m_info member
	in DocumentTableInfo's copy constructor and assignment operator.
	This should fix bug #566102 (Iain Lane)

2008-12-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.h: show_tool_pallete(): Make this 
	non-virtual because there are no overrides.
	* glom/mode_find/box_data_details_find.cc: constructor, 
	fill_from_database(): Hide the tool palette, because it is useless in 
	Find mode.

2008-12-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/layout/layoutitem_text.cc: 
	Copy constructor and operator=: Copy the underlying text, not just 
	the smartpointer to it. This stops us from accidentally changing the 
	empty available template parts in reports.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/309417
	(elmergato)

2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/mode_design/print_layouts/canvas_layout_item.cc:
	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	* glom/utility_widgets/canvas/canvas_group_resizable.cc:
	Adapt to goocanvasmm enum name changes.
	This requires goocanvasmm 0.13.

2008-12-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_groups_list.cc
	on_button_group_delete():
	* glom/mode_design/users/dialog_users_list.cc
	on_button_user_delete(), on_button_user_add(),