@@ -59,6 +59,12 @@ Gnome::Gda::Value Base_DB_Table_Data::get_entered_field_data(const sharedptr<con
   return Gnome::Gda::Value(); //null
 }
 
+Gtk::TreeModel::iterator Base_DB_Table_Data::get_row_selected()
+{
+  //This in meaningless for Details, 
+  //but is overridden for list views.
+  return Gtk::TreeModel::iterator();
+}
 
 Glib::RefPtr<Gnome::Gda::DataModel> Base_DB_Table_Data::record_new(bool use_entered_data, const Gnome::Gda::Value& primary_key_value)
 {
@@ -211,7 +217,7 @@ Glib::RefPtr<Gnome::Gda::DataModel> Base_DB_Table_Data::record_new(bool use_ente
     result = query_execute(strQuery, App_Glom::get_application());
     if(result)
     {
-      Gtk::TreeModel::iterator row; // TODO: remove this parameter.
+      Gtk::TreeModel::iterator row = get_row_selected(); //Null and ignored for details views.
       set_primary_key_value(row, primary_key_value); //Needed by Box_Data_List::on_adddel_user_changed().
 
       //Update any lookups, related fields, or calculations:
