@@ -1,3 +1,14 @@
+2009-02-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/base_db_table_data.[h|cc]: Added get_row_selected() virtual function, 
+	used in record_new() instead of an always-null TreeModel::iterator.
+	This lets lookups, default values, and calculated values be seen when 
+	adding new list records or related records.
+	* glom/mode_data/box_data_list.[h|cc]: 
+	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: 
+	Added get_row_selected() overrides.
+	This should fix bug #569722 (Johannes Schmid)
+
 2009-01-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/glom.glade: Main window: Correct the order of the Records: and 
